--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
+  "dependencies": {
+    "express": "^4.21.2",
+    "mongoose": "^8.16.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tusharsingh3/Virinchi.git"
